Update 190424: Save is not working

--- a/Automata-Expedition.csproj
+++ b/Automata-Expedition.csproj
@@ -123,6 +123,9 @@
     <Compile Include="Classes\GameManager.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Puppet.cs" />
+    <Compile Include="Views\ExpeditionPage.xaml.cs">
+      <DependentUpon>ExpeditionPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\HQPage.xaml.cs">
       <DependentUpon>HQPage.xaml</DependentUpon>
     </Compile>
@@ -155,6 +158,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\ExpeditionPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\HQPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
